[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "rc_refcell"
path = "src/examples/rc_refcell.rs"

[[bin]]
name = "001_Two_Sum"
path = "src/easy/001_Two_Sum.rs"

[[bin]]
name = "009_palindrome_number"
path = "src/easy/009_palindrome_number.rs"

[[bin]]
name = "013_roman_to_integer"
path = "src/easy/013_roman_to_integer.rs"

[[bin]]
name = "014_longest_common_prefix"
path = "src/easy/014_longest_common_prefix.rs"

[[bin]]
name = "020_valid_parentheses"
path = "src/easy/020_valid_parentheses.rs"

[[bin]]
name = "021_Merge_Two_Sorted_Lists"
path = "src/easy/021_Merge_Two_Sorted_Lists.rs"

[[bin]]
name = "026_Remove_Duplicates_from_Sorted_Array"
path = "src/easy/026_Remove_Duplicates_from_Sorted_Array.rs"

[[bin]]
name = "027_Remove_Element"
path = "src/easy/027_Remove_Element.rs"

[[bin]]
name = "028_Find_the_Index_of_the_First_Occurrence_in_a_String"
path = "src/easy/028_Find_the_Index_of_the_First_Occurrence_in_a_String.rs"

[[bin]]
name = "035_Search_Insert_Position"
path = "src/easy/035_Search_Insert_Position.rs"

[[bin]]
name = "058_Length_of_Last_Word"
path = "src/easy/058_Length_of_Last_Word.rs"

[[bin]]
name = "066_Plus_One"
path = "src/easy/066_Plus_One.rs"

[[bin]]
name = "067_Add_Binary"
path = "src/easy/067_Add_Binary.rs"

[[bin]]
name = "069_Sqrt_x"
path = "src/easy/069_Sqrt_x.rs"

[[bin]]
name = "070_Climbing_Stairs"
path = "src/easy/070_Climbing_Stairs.rs"

[[bin]]
name = "083_Remove_Duplicates_from_Sorted_List"
path = "src/easy/083_Remove_Duplicates_from_Sorted_List.rs"

[[bin]]
name = "088_Merge_Sorted_Array"
path = "src/easy/088_Merge_Sorted_Array.rs"

[[bin]]
name = "094_Binary_Tree_Inorder_Traversal"
path = "src/easy/094_Binary_Tree_Inorder_Traversal.rs"

[[bin]]
name = "100_Same_Tree"
path = "src/easy/100_Same_Tree.rs"

[[bin]]
name = "101_Symmetric_Tree"
path = "src/easy/101_Symmetric_Tree.rs"

[[bin]]
name = "104_Maximum_Depth_of_Binary_Tree"
path = "src/easy/104_Maximum_Depth_of_Binary_Tree.rs"

[[bin]]
name = "108_Convert_Sorted_Array_to_Binary_Search_Tree"
path = "src/easy/108_Convert_Sorted_Array_to_Binary_Search_Tree.rs"

[[bin]]
name = "110_Balanced_Binary_Tree"
path = "src/easy/110_Balanced_Binary_Tree.rs"

[[bin]]
name = "p111_minimum_depth_of_binary_tree"
path = "src/easy/p111_minimum_depth_of_binary_tree.rs"

[[bin]]
name = "p112_path_sum"
path = "src/easy/p112_path_sum.rs"

[[bin]]
name = "p118_pascals_triangle"
path = "src/easy/p118_pascals_triangle.rs"

[[bin]]
name = "p119_pascals_triangle_ii"
path = "src/easy/p119_pascals_triangle_ii.rs"

[[bin]]
name = "p121_best_time_to_buy_and_sell_stock"
path = "src/easy/p121_best_time_to_buy_and_sell_stock.rs"

[[bin]]
name = "p125_valid_palindrome"
path = "src/easy/p125_valid_palindrome.rs"

[[bin]]
name = "p136_single_number"
path = "src/easy/p136_single_number.rs"

[[bin]]
name = "p141_linked_list_cycle"
path = "src/easy/p141_linked_list_cycle.rs"

[[bin]]
name = "p144_binary_tree_preorder_traversal"
path = "src/easy/p144_binary_tree_preorder_traversal.rs"

[[bin]]
name = "p145_binary_tree_postorder_traversal"
path = "src/easy/p145_binary_tree_postorder_traversal.rs"

[[bin]]
name = "p168_excel_sheet_column_title"
path = "src/easy/p168_excel_sheet_column_title.rs"

[[bin]]
name = "p169_majority_element"
path = "src/easy/p169_majority_element.rs"

[[bin]]
name = "p171_excel_sheet_column_number"
path = "src/easy/p171_excel_sheet_column_number.rs"

[[bin]]
name = "p190_reverse_bits"
path = "src/easy/p190_reverse_bits.rs"

[[bin]]
name = "p191_number_of_1_bits"
path = "src/easy/p191_number_of_1_bits.rs"

[[bin]]
name = "p202_happy_number"
path = "src/easy/p202_happy_number.rs"

[[bin]]
name = "p203_remove_linked_list_elements"
path = "src/easy/p203_remove_linked_list_elements.rs"

[[bin]]
name = "p205_isomorphic_strings"
path = "src/easy/p205_isomorphic_strings.rs"

[[bin]]
name = "p206_reverse_linked_list"
path = "src/easy/p206_reverse_linked_list.rs"

[[bin]]
name = "p217_contains_duplicate"
path = "src/easy/p217_contains_duplicate.rs"

[[bin]]
name = "p219_contains_duplicate_ii"
path = "src/easy/p219_contains_duplicate_ii.rs"

[[bin]]
name = "p222_count_complete_tree_nodes"
path = "src/easy/p222_count_complete_tree_nodes.rs"

[[bin]]
name = "p225_implement_stack_using_queues"
path = "src/easy/p225_implement_stack_using_queues.rs"

[[bin]]
name = "p226_invert_binary_tree"
path = "src/easy/p226_invert_binary_tree.rs"

[[bin]]
name = "p228_summary_ranges"
path = "src/easy/p228_summary_ranges.rs"

[[bin]]
name = "p231_power_of_two"
path = "src/easy/p231_power_of_two.rs"

[[bin]]
name = "p232_implement_queue_using_stacks"
path = "src/easy/p232_implement_queue_using_stacks.rs"

[[bin]]
name = "p234_palindrome_linked_list"
path = "src/easy/p234_palindrome_linked_list.rs"

[[bin]]
name = "p242_valid_anagram"
path = "src/easy/p242_valid_anagram.rs"

[[bin]]
name = "p257_binary_tree_paths"
path = "src/easy/p257_binary_tree_paths.rs"

[[bin]]
name = "p258_add_digits"
path = "src/easy/p258_add_digits.rs"

[[bin]]
name = "p263_ugly_number"
path = "src/easy/p263_ugly_number.rs"

[[bin]]
name = "p268_missing_number"
path = "src/easy/p268_missing_number.rs"

[[bin]]
name = "p283_move_zeroes"
path = "src/easy/p283_move_zeroes.rs"

[[bin]]
name = "p290_word_pattern"
path = "src/easy/p290_word_pattern.rs"

[[bin]]
name = "p292_nim_game"
path = "src/easy/p292_nim_game.rs"

[[bin]]
name = "p303_range_sum_query_immutable"
path = "src/easy/p303_range_sum_query_immutable.rs"

[[bin]]
name = "p326_power_of_three"
path = "src/easy/p326_power_of_three.rs"

[[bin]]
name = "p338_counting_bits"
path = "src/easy/p338_counting_bits.rs"

[[bin]]
name = "p342_power_of_four"
path = "src/easy/p342_power_of_four.rs"

[[bin]]
name = "p344_reverse_string"
path = "src/easy/p344_reverse_string.rs"

[[bin]]
name = "p345_reverse_vowels_of_a_string"
path = "src/easy/p345_reverse_vowels_of_a_string.rs"

[[bin]]
name = "p349_intersection_of_two_arrays"
path = "src/easy/p349_intersection_of_two_arrays.rs"

[[bin]]
name = "p350_intersection_of_two_arrays_ii"
path = "src/easy/p350_intersection_of_two_arrays_ii.rs"

[[bin]]
name = "p367_valid_perfect_square"
path = "src/easy/p367_valid_perfect_square.rs"

[[bin]]
name = "p374_guess_number_higher_or_lower"
path = "src/easy/p374_guess_number_higher_or_lower.rs"

[[bin]]
name = "p383_ransom_note"
path = "src/easy/p383_ransom_note.rs"

[[bin]]
name = "p387_first_unique_character_in_a_string"
path = "src/easy/p387_first_unique_character_in_a_string.rs"

[[bin]]
name = "p389_find_the_difference"
path = "src/easy/p389_find_the_difference.rs"

[[bin]]
name = "p392_is_subsequence"
path = "src/easy/p392_is_subsequence.rs"

[[bin]]
name = "p401_binary_watch"
path = "src/easy/p401_binary_watch.rs"

[[bin]]
name = "p404_sum_of_left_leaves"
path = "src/easy/p404_sum_of_left_leaves.rs"

[[bin]]
name = "p405_convert_a_number_to_hexadecimal"
path = "src/easy/p405_convert_a_number_to_hexadecimal.rs"

[[bin]]
name = "p409_longest_palindrome"
path = "src/easy/p409_longest_palindrome.rs"

[[bin]]
name = "p412_fizz_buzz"
path = "src/easy/p412_fizz_buzz.rs"
